correcting nav alignment

--- a/css/index.css
+++ b/css/index.css
@@ -147,7 +147,7 @@ header {
 
 nav {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     justify-content: space-between;
     margin-bottom: 40px;
 }
@@ -155,7 +155,7 @@ nav {
 nav .navbar {
     width: 80%;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: space-around;
 }
 
